[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/actors/player/zombie_walk1.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/death.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/themes/query_theme.tres" type="Theme" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.412, 49.4981 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.4815, 37.0676 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.8601, 49.3342 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36.2055, 29.4816 )

[node name="Player" type="KinematicBody2D" groups=["Players"]]
position = Vector2( 0, -1 )
scale = Vector2( 0.580022, 0.580022 )
collision_mask = 12
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0 ],
"_edit_vertical_guides_": [ 0.0 ]
}
speed = Vector2( 400, 1400 )
stomp_impulse = 1000.0

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.862037, -50.4981 )
shape = SubResource( 1 )

[node name="HeadCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 5.17222, -114.651 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -160 )
current = true
limit_left = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.15
drag_margin_top = 0.15
drag_margin_right = 0.15
drag_margin_bottom = 0.15
editor_draw_drag_margin = true

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.027451, 0.384314, 0.796078, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0.86204, -55.8342 )
shape = SubResource( 2 )

[node name="HeadCollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 5.17222, -125.685 )
shape = SubResource( 4 )

[node name="JumpAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DeathAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="Body" type="Sprite" parent="."]
position = Vector2( 3.27498, -92.3231 )
scale = Vector2( 1.34049, 1.6755 )
texture = ExtResource( 1 )

[node name="QueryLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -220.0
margin_right = 100.0
margin_bottom = -180.0
theme = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
